objects/tffa__PartyPartyXref__c.object
<CustomObject>
    <description>A relationship between 2 applicants of a submission. 
Personal relationship could be SPOUSE, PARENT, FRIENDS.
Business relationship between a company and an individual could be DIRECTOR, OWNER, EXECUTIVE, PARTNER etc. In additional the ownership percentage can be captured for OWNER type of relationship. 
Relationship between 2 company type applicants can also be captured such as PARENT and SUBSIDIARY.</description>
    <fields>
        <fullName>CZFisRelnshipCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if FIS Relnship is created</description>
        <label>FIS Relnship Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZIsCertifyingIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Certifying Individual</description>
        <label>Is Certifying Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ControllingParty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the individual (related party) has significant responsibility to control, manage, or direct the legal entity or organization (party). Applicable to business relationships.</description>
        <label>Controlling party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinanciallyDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the related party is financially dependent on the party in a personal type relationship.</description>
        <label>Financially dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OwnershipPercentage__c</fullName>
        <description>Percentage ownership of related party in the party (an Organization) in a business ownership type relationship.</description>
        <label>Ownership percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Party managing the relationship</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Related To</relationshipLabel>
        <relationshipName>PartyXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__RelatedParty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related party in the relationship</description>
        <label>Related Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Related As</relationshipLabel>
        <relationshipName>RelatedPartyXrefs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RelationCategory__c</fullName>
        <description>Kind of relation. e.g PERSONAL, BUSINESS. Derived from the relation code.</description>
        <label>Relation category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRelationCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RelationCodeValue__c</fullName>
        <description>Value of the relation code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation code value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RelationCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Captures how Related Party related to Party.</description>
        <inlineHelpText>Captures how Related Party related to Party.</inlineHelpText>
        <label>Relation Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Relation code not active.</errorMessage>
            <filterItems>
                <field>tffa__PartyRelationCode__c.tffa__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__PartyRelationCode__c</referenceTo>
        <relationshipLabel>Party Party Relationships</relationshipLabel>
        <relationshipName>PartyPartyXrefs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Title__c</fullName>
        <description>The designation of the related party w.r.t to the party (organization). Could be Senior Manager, Director, VP, CIO, CEO etc. Usually captured in addition to the main relationship - Owner, Signer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Party Party Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Party Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>tffa__ValidateRelationCode</fullName>
        <active>true</active>
        <description>Validates whether the relation code selected is appropriate for the party - related party combination.</description>
        <errorConditionFormula>TEXT(tffa__Party__r.tffa__Type__c) != TEXT(tffa__RelationCode__r.tffa__PartyType__c) || TEXT(tffa__RelatedParty__r.tffa__Type__c) != TEXT(tffa__RelationCode__r.tffa__RelatedPartyType__c)</errorConditionFormula>
        <errorDisplayField>tffa__RelationCode__c</errorDisplayField>
        <errorMessage>The relation is invalid for the associated parties.</errorMessage>
    </validationRules>
</CustomObject>